# LearnOGL

./: CMakeLists.txt  README.md  glad.c  main.cpp
assets/shaders/: fragment.glsl  phong.frag  phong.vert  vertex.glsl
include/base/: core.h
include/glad/: glad.h
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  app.cpp  app.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
src/light/: CMakeLists.txt  light.h
src/model/: CMakeLists.txt  geometry.cpp  geometry.h  mesh.h  object.cpp  object.h  texture.cpp  texture.h
src/model/material/: material.h  phongMaterial.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/shader/: CMakeLists.txt  shader.cpp  shader.h
src/wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
